<resources>
    <string name="app_name">Rick And Morty \nFanclub App</string>

    <!-- MENU BOTTOM NAVIGATION -->
    <string name="menu_character">Characters</string>
    <string name="menu_location">Locations</string>
    <string name="menu_episode">Episodes</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_search">Search</string>
    <string name="info_character">Info</string>

    <!-- Info Character -->
    <string name="title_character_name">Character name</string>
    <string name="title_origin">Origin</string>
    <string name="title_name">Name</string>
    <string name="title_type">Type</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>

    <string name="category_human">Human</string>
    <string name="category_animal">Animal</string>
    <string name="category_alien">Alien</string>
    <string name="category_unknown">Unknown</string>
    <string name="category_all">All Character</string>

    <string name="specie_title">Specie</string>
    <string name="gender_title">Gender</string>
    <string name="type_title">Type</string>
    <string name="dimension_title">Dimension</string>
    <string name="find_location_text">Find Location</string>
    <string name="find_ep_text">Find Episode</string>
    <string name="click_text">Click</string>
    <string name="no_data">unspecified</string>
    <string name="number_resident">Residents</string>

    <string name="title_season">Season %d</string>
    <string name="tag_season">season:%s</string>
    <string name="tag_episode">episode:%s</string>
    <string name="title_see_more">see more</string>

    <string name="hint_search">search name character</string>
    <string name="not_found">Sorry! no result found</string>
</resources>