<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/character"
        android:title="@string/menu_character"
        android:icon="@drawable/icon_menu_character"
        app:showAsAction="always"/>

    <item
        android:id="@+id/location"
        android:title="@string/menu_location"
        android:icon="@drawable/icon_menu_location"
        app:showAsAction="always"/>

    <item
        android:id="@+id/episode"
        android:title="@string/menu_episode"
        android:icon="@drawable/icon_menu_episode"
        app:showAsAction="always"/>

    <item
        android:id="@+id/search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"/>
</menu>