<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".feature.location.DetailLocationActivity">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/spacing_standard"
            android:background="@drawable/icon_back_button" />
    </FrameLayout>

    <com.example.rickmorty.app.base.custom.CustomTextView
        android:id="@+id/locationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:padding="@dimen/spacing_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        tools:text="InterdimensionalCableeee" />

   <androidx.appcompat.widget.LinearLayoutCompat
       android:id="@+id/mainLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:layout_marginTop="@dimen/spacing_standard"
       android:orientation="vertical"
       android:layout_marginHorizontal="18dp"
       app:layout_constraintTop_toBottomOf="@id/locationName">
       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="start"
           android:padding="25dp">

           <com.example.rickmorty.app.base.custom.CustomTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/roboto_mono_bold"
               android:textSize="20sp"
               android:textColor="@color/black"
               android:text="@string/type_title"/>
           <com.example.rickmorty.app.base.custom.CustomTextView
               android:id="@+id/typeText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/spacing_small"
               android:textSize="18sp"
               android:textColor="@color/black"
               tools:text="Space Station"/>
       </androidx.appcompat.widget.LinearLayoutCompat>

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="25dp"
           android:gravity="start"
           app:layout_constraintTop_toBottomOf="@id/locationName">

           <com.example.rickmorty.app.base.custom.CustomTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/roboto_mono_bold"
               android:textSize="20sp"
               android:textColor="@color/black"
               android:text="@string/dimension_title"/>

           <com.example.rickmorty.app.base.custom.CustomTextView
               android:id="@+id/dimensionText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/spacing_small"
               android:textSize="18sp"
               android:textColor="@color/black"
               tools:text="C-137"/>
       </androidx.appcompat.widget.LinearLayoutCompat>
   </androidx.appcompat.widget.LinearLayoutCompat>

   <com.example.rickmorty.app.base.custom.CustomTextView
       android:id="@+id/numberOfResidents"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@id/mainLayout"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="@dimen/spacing_standard"
       android:layout_marginTop="25dp"
       android:textSize="32sp"
       android:fontFamily="@font/roboto_regular"
       android:textColor="@color/black"
       tools:text="@string/number_resident"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberOfResidents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:spanCount="2"
        android:layout_marginTop="@dimen/spacing_standard"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_card_character"/>
</androidx.constraintlayout.widget.ConstraintLayout>